--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -19,7 +19,7 @@ default.paginate.prev=Previous
 default.paginate.next=Next
 default.boolean.true=True
 default.boolean.false=False
-default.date.format=yyyy-MM-dd HH:mm:ss z
+default.date.format=dd/MM/yyyy
 default.number.format=0
 
 default.created.message={0} {1} created
@@ -36,6 +36,8 @@ default.new.label=New {0}
 default.create.label=Create {0}
 default.show.label=Show {0}
 default.edit.label=Edit {0}
+default.link.new.label=New
+default.link.list.label=List
 
 default.button.create.label=Create
 default.button.edit.label=Edit
