--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -34,10 +34,12 @@ default.list.label={0} List
 default.add.label=Add {0}
 default.new.label=New {0}
 default.create.label=Create {0}
+default.search.label=Search {0}
 default.show.label=Show {0}
 default.edit.label=Edit {0}
 default.link.new.label=New
 default.link.list.label=List
+default.link.search.label=Search
 
 default.button.create.label=Create
 default.button.edit.label=Edit
