Added Attachment in Letter Reference

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -37,9 +37,11 @@ default.create.label=Create {0}
 default.search.label=Search {0}
 default.show.label=Show {0}
 default.edit.label=Edit {0}
+default.attachFile.label=Attach File to {0}
 default.link.new.label=New
 default.link.list.label=List
 default.link.search.label=Search
+default.link.remove.label=Remove
 
 default.button.create.label=Create
 default.button.edit.label=Edit
