--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -47,6 +47,7 @@ default.button.create.label=Create
 default.button.edit.label=Edit
 default.button.update.label=Update
 default.button.delete.label=Delete
+default.button.search.label=Search
 default.button.delete.confirm.message=Are you sure?
 default.excel=Export To Excel
 
