Fixed Export to Excel for Search File

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -48,6 +48,7 @@ default.button.edit.label=Edit
 default.button.update.label=Update
 default.button.delete.label=Delete
 default.button.search.label=Search
+default.button.reset.label=Reset
 default.button.delete.confirm.message=Are you sure?
 default.excel=Export To Excel
 
